tests/snapshots/snapshots/test_cli_commands_snapshots__init_help_output.snap
---
source: tests/snapshots/test_cli_commands_snapshots.rs
expression: normalized
---
Init creates the .newton workspace layout, installs the Newton template with aikit-sdk, and writes default configs so you can run immediately.

Usage: newton init [OPTIONS] [PATH]

Arguments:
  [PATH]
          Directory where .newton/ will be created (defaults to current directory)

Options:
      --template-source <SOURCE>
          Template source (GitHub repo, URL, or local path; default: gonewton/newton-templates)

  -h, --help
          Print help (see a summary with '-h')

Example:
    newton init ./workspace
