tests/snapshots/snapshots/test_cli_commands_snapshots__main_help_snapshot.snap
---
source: tests/snapshots/test_cli_commands_snapshots.rs
expression: stdout
---
newton
Newton Loop optimization framework in Rust

USAGE:
    newton <COMMAND>

OPTIONS:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
WORKFLOW COMMANDS:
  run      Execute a full optimization loop
  batch    Process queued work items for a project
  step     Advance loop by one cycle
  status   Inspect progress of an execution
  report   Summarize learnings from an execution
  error    Diagnose failures during optimization
  monitor  Monitor live ailoop channels via a terminal UI
  init     Initialize a directory as a Newton workspace
  help     Print this message or the help of the given subcommand(s)
