tests/snapshots/snapshots/test_cli_commands_snapshots__step_command_snapshot.snap
---
source: tests/snapshots/test_cli_commands_snapshots.rs
expression: stdout
---
Step performs exactly one evaluation/advice/execution round using current workspace state.

Usage: newton step [OPTIONS] <PATH>

Arguments:
  <PATH>
          Path to read/write Newton artifacts from

Options:
      --execution-id <EXECUTION>
          Associate the single step with an execution ID for auditing

  -h, --help
          Print help (see a summary with '-h')

Output Options:
      --verbose
          Enable verbose output to display tool stdout/stderr

Example:
    newton step ./workspace --execution-id exec_123
