tests/snapshots/snapshots/test_cli_commands_snapshots__version_output.snap
---
source: tests/snapshots/test_cli_commands_snapshots.rs
expression: "std::str::from_utf8(&output.stdout).unwrap()"
---
newton 0.5.7
